--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       color: #333;
     }
     header {
-      background-color: #007bff;
+      background-color: ##FF6600;
       color: white;
       padding: 20px 0;
       text-align: center;
@@ -48,7 +48,7 @@
       border-radius: 4px;
     }
     button {
-      background-color: #007bff;
+      background-color: ##FF6600;
       color: white;
       padding: 12px 20px;
       border: none;
@@ -72,8 +72,7 @@
 
   <header>
     <h1>RISHABH RAI SERVICES</h1>
-    <p>Your Trusted Business Partner</p>
-  </header>
+      </header>
 
   <nav>
     <a href="#">Home</a>
