--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>RISHABH RAI SERVICES</title>
+  <title>RISHABH & BROTHERS SERVICES</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -82,7 +82,7 @@
   </nav>
 
   <div class="container">
-    <h2>Welcome to RISHABH RAI SERVICES</h2>
+    <h2>Welcome to RISHABH & BROTHERS SERVICES</h2>
     <p>We provide professional and reliable services to meet your business needs.</p>
 
     <h3>Our Services:</h3>
@@ -106,7 +106,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 RISHABH RAI SERVICES. All Rights Reserved.</p>
+    <p>&copy; 2025 RISHABH & BROTHERS SERVICES. All Rights Reserved.</p>
     <p>Email: support@raigroups.in | Phone: +91-8173924444</p>
   </footer>
 
