--- a/index.html
+++ b/index.html
@@ -64,22 +64,12 @@
   <div style="max-width: 1000px; margin: auto; display: flex; flex-wrap: wrap; justify-content: space-around; gap: 20px;">
 
     <div style="flex: 1 1 300px; background: #f5f5f5; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px #ccc;">
-      <h3 style="color: #0056b3;">Business Consulting</h3>
-      <p>We provide expert business consultation tailored to your needs, including planning, strategy, and growth execution.</p>
-    </div>
-
-    <div style="flex: 1 1 300px; background: #f5f5f5; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px #ccc;">
-      <h3 style="color: #0056b3;">IT & Networking Solutions</h3>
-      <p>Setup, manage, and maintain IT infrastructure including LAN/WAN, servers, and security systems with top-notch support.</p>
-    </div>
-
-    <div style="flex: 1 1 300px; background: #f5f5f5; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px #ccc;">
       <h3 style="color: #0056b3;">Manpower Supply</h3>
-      <p>We provide skilled and semi-skilled manpower for industries, construction, maintenance, and office support roles.</p>
+      <p>We provide manpower for industries, construction, maintenance, and office support roles.</p>
     </div>
 
     <div style="flex: 1 1 300px; background: #f5f5f5; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px #ccc;">
-      <h3 style="color: #0056b3;">Maintenance and Support</h3>
+      <h3 style="color: #0056b3;">Electrical Operation, Maintenance and Support</h3>
       <p>Comprehensive maintenance services for electrical, hardware, and facility management to keep your operations running smoothly.</p>
     </div>
   
