--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     .hero h1 {
       font-size: 36px;
     }
-    .services, .contact {
+    .home, .services, .contact {
       padding: 40px;
     }
-    .services h2, .contact h2 {
+     .home h2, .services h2, .contact h2 {
       font-size: 28px;
       color: #1e88e5;
       margin-bottom: 20px;
@@ -79,6 +79,7 @@
     <img src="logo.jpg" alt="Company Logo" />
   </div>
   <nav>
+    <a href="index.html">Home</a>
     <a href="#services">Services</a>
     <a href="#contact">Contact</a>
   </nav>
