--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
 
     <button type="submit">Send Message</button>
   </form>
-  <p><strong>Email:</strong> support@raigroups.in</p>
-  <p><strong>Phone:</strong> +91 8173924444</p>
+  <p><strong>Email:</strong> admin@raigroups.in</p>
+  <p><strong>Phone:</strong> +91 8172840406</p>
 </section>
 
 <footer>
-  <p>&copy; 2025 RISHABH & BROTHERS SERVICES | All rights reserved.</p>
+  <p>&copy; 2024 RISHABH & BROTHERS SERVICES | All rights reserved.</p>
 </footer>
 
 </body>
