--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 <section class="contact" id="contact">
   <h2>Contact Us</h2>
-  <form action="mailto:support@raigroups.in" method="post" enctype="text/plain">
+  <form action="mailto:admin@raigroups.in" method="post" enctype="text/plain">
     <label for="name">Name</label>
     <input type="text" id="name" name="name" required/>
 
