--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Home | RISHABH & BROTHERS SERVICES</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f9f9f9; }
-    header { background-color: #1e88e5; color: white; padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
+    header { background-color: oklch(63.106% 0.16697 45.262 / 0.938); color: white; padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
     header img { height: 60px; }
     nav a { color: white; margin-left: 20px; text-decoration: none; font-weight: bold; }
     .hero { padding: 60px 40px; background: #e3f2fd; text-align: center; }
