--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -6,7 +6,7 @@
   <title>Home | RISHABH & BROTHERS SERVICES</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
-    header { background-color: #e25915; color: hsl(0, 3%, 6%); padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
+    header { background-color: #1e88e5; color: white; padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
     header img { height: 60px; }
     nav a { color: white; margin-left: 20px; text-decoration: none; font-weight: bold; }
 
