--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
 <body>
 
   <header>
-    <div><img src="logo.jpg" alt="Company Logo" /></div>
+    <div><img src="logo.jpg" alt="Company Logo" /></div> <!-- Hero Text -->
+  <div class="hero-text">
+    <h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
+    <p>Professional, Reliable, and Affordable Services</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
@@ -54,12 +57,7 @@
     </div>
   </div>
 
-  <!-- Hero Text -->
-  <div class="hero-text">
-    <h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
-    <p>Professional, Reliable, and Affordable Services</p>
-  </section>
-
+  
   <footer>
     <p>&copy; 2024 RISHABH & BROTHERS SERVICES | All rights reserved.</p>
   </footer>
