--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 <body>
 
   <header>
-    <div><img src="logo.jpg" alt="Company Logo" /></div> <!-- Hero Text -->
-  <div class="hero-text">
-    <h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
+    <div><img src="logo.jpg" alt="Company Logo" /><h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
     <p>Professional, Reliable, and Affordable Services</p>
     <nav>
       <a href="index.html">Home</a>
