--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <header>
     <div><img src="logo.jpg" alt="Company Logo" /><h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
     <p>Professional, Reliable, and Affordable Services</p>
+    </div>
     <nav>
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
