--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Home | RISHABH & BROTHERS SERVICES</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
-    header { background-color: #e25915; color: hsl(0, 3%, 6%); padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
+    header { background-color: #eae3e0; color: hsl(0, 3%, 6%); padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
     header img { height: 60px; }
-    nav a { color: white; margin-left: 20px; text-decoration: none; font-weight: bold; }
+    nav a { color: rgb(26, 25, 25); margin-left: 20px; text-decoration: none; font-weight: bold; }
 
     .slider { position: relative; width: 100%; max-height: 500px; overflow: hidden; }
     .slides { display: flex; width: 400%; animation: slide 16s infinite; }
