--- a/services.html
+++ b/services.html
@@ -6,9 +6,9 @@
   <title>Services | RISHABH & BROTHERS SERVICES</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
-    header { background-color: #e25915; color: hsl(0, 3%, 6%); padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
+    header { background-color: #e8e3e0; color: hsl(0, 3%, 6%); padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
     header img { height: 60px; }
-    nav a { color: white; margin-left: 20px; text-decoration: none; font-weight: bold; }
+    nav a { color: rgb(226, 89, 31); margin-left: 20px; text-decoration: none; font-weight: bold; }
     .services { padding: 40px; }
     .services h2 { font-size: 28px; color: #1e88e5; margin-bottom: 20px; }
     .service-item { background: white; padding: 20px; margin-bottom: 20px; border-left: 5px solid #1e88e5; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
