--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
     header { background-color: #e25915; color: hsl(0, 3%, 6%); padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
     header img { height: 60px; }
-    nav a { color: white; margin-left: 20px; text-decoration: none; font-weight: bold; }
+    nav a { color: rgb(228, 76, 21); margin-left: 20px; text-decoration: none; font-weight: bold; }
     .contact { padding: 40px; }
     .contact h2 { font-size: 28px; color: #1e88e5; margin-bottom: 20px; }
     form input, form textarea {
