--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 <body>
 
   <header>
-    <div><img src="logo.jpg" alt="Company Logo" /><h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
+    <div>
+      <a href="index.html">
+      </a><img src="logo.jpg" alt="Company Logo" /><h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
     <p>Professional, Reliable, and Affordable Services</p>
     </div>
     <nav>
