--- a/services.html
+++ b/services.html
@@ -17,7 +17,12 @@
 </head>
 <body>
   <header>
-    <div><img src="logo.jpg" alt="Company Logo" /></div>
+    header>
+    <div>
+      <a href="index.html">
+      </a><img src="logo.jpg" alt="Company Logo" /><h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
+    <p>Professional, Reliable, and Affordable Services</p>
+    </div>
     <nav>
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
