--- a/Contact.html
+++ b/Contact.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact | RISHABH & BROTHERS SERVICES</title>
   <style>
-   body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
-    header { background-color: #eae3e0; color: hsl(0, 3%, 6%); padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: rgb(221, 111, 52); }
+    header { background-color: rgb(221, 111, 52); color: hsl(0, 3%, 6%); padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
     header img { height: 60px; }
     nav a { color: rgb(26, 25, 25); margin-left: 20px; text-decoration: none; font-weight: bold; }
     .contact { padding: 40px; }
