--- a/services.html
+++ b/services.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Services | RISHABH & BROTHERS SERVICES</title>
   <style>
-   body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: rgb(221, 111, 52); }
-    header { background-color: rgb(221, 111, 52); color: hsl(0, 3%, 6%); padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
+   body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fcfcfc; }
+    header { background-color: #ed8b2a; color: hsl(0, 3%, 6%); padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
     header img { height: 60px; }
     nav a { color: rgb(26, 25, 25); margin-left: 20px; text-decoration: none; font-weight: bold; }
+
     .services { padding: 40px; }
     .services h2 { font-size: 28px; color: #1e88e5; margin-bottom: 20px; }
     .service-item { background: white; padding: 20px; margin-bottom: 20px; border-left: 5px solid #1e88e5; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
