--- a/services.html
+++ b/services.html
@@ -5,14 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Services | RISHABH & BROTHERS SERVICES</title>
   <style>
-  body { font-family: Arial, sans-serif; margin: 0; background: #f5f5f5; color: #333; }
-    header { background-color: #FF6600; color: white; padding: 20px 0; text-align: center; }
-    nav { text-align: center; background: #0056b3; padding: 10px 0; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    .container { padding: 30px; text-align: center; }
-    footer { background: #222; color: #ccc; text-align: center; padding: 15px 0; margin-top: 40px; }
-    .service-box { background: #fff; padding: 20px; margin: 20px auto; max-width: 600px; border-radius: 10px; box-shadow: 0 0 10px #ccc; }
-    h3 { color: #0056b3; }
+   body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fcfcfc; }
+    header { background-color: #FF6600; color: white; padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
+    header img { height: 60px; }
+    nav a { color: rgb(26, 25, 25); margin-left: 20px; text-decoration: none; font-weight: bold; }
+    .contact { padding: 40px; }
+    .contact h2 { font-size: 28px; color: #1e88e5; margin-bottom: 20px; }
+    form input, form textarea {
+      width: 100%; padding: 10px; margin: 8px 0; border: 1px solid #ccc; }
+    form button {
+      background-color: #1e88e5; color: white; padding: 10px 20px; border: none; margin-top: 10px; cursor: pointer; }
+    footer { background: #0d47a1; color: white; text-align: center; padding: 20px; }
   </style>
 </head>
 <body>
