--- a/services.html
+++ b/services.html
@@ -9,8 +9,8 @@
     header { background-color: #FF6600; color: white; padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
     header img { height: 60px; }
     nav a { color: rgb(26, 25, 25); margin-left: 20px; text-decoration: none; font-weight: bold; }
-    .contact { padding: 40px; }
-    .contact h2 { font-size: 28px; color: #1e88e5; margin-bottom: 20px; }
+    .services { padding: 40px; }
+    .services h2 { font-size: 28px; color: #1e88e5; margin-bottom: 20px; }
     form input, form textarea {
       width: 100%; padding: 10px; margin: 8px 0; border: 1px solid #ccc; }
     form button {
