--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact | RISHABH & BROTHERS SERVICES</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fcfcfc; }
-    header { background-color: #ed8b2a; color: hsl(0, 3%, 6%); padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
+   body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fcfcfc; }
+    header { background-color: #FF6600; color: white; padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
     header img { height: 60px; }
     nav a { color: rgb(26, 25, 25); margin-left: 20px; text-decoration: none; font-weight: bold; }
-
     .contact { padding: 40px; }
     .contact h2 { font-size: 28px; color: #1e88e5; margin-bottom: 20px; }
     form input, form textarea {
-      width: 100%; padding: 10px; margin: 8px 0; border: 1px solid #ccc;
-    }
+      width: 100%; padding: 10px; margin: 8px 0; border: 1px solid #ccc; }
     form button {
-      background-color: #1e88e5; color: white; padding: 10px 20px; border: none; margin-top: 10px; cursor: pointer;
-    }
+      background-color: #1e88e5; color: white; padding: 10px 20px; border: none; margin-top: 10px; cursor: pointer; }
     footer { background: #0d47a1; color: white; text-align: center; padding: 20px; }
   </style>
 </head>
