--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fcfcfc; }
     header { background-color: #FF6600; color: white; padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
     header img { height: 60px; }
-    nav a { color: rgb(26, 25, 25); margin-left: 20px; text-decoration: none; font-weight: bold; }
+    nav a { color: white; margin-left: 20px; text-decoration: none; font-weight: bold; }
     .contact { padding: 40px; }
     .contact h2 { font-size: 28px; color: #1e88e5; margin-bottom: 20px; }
     form input, form textarea {
