--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 
   <section class="contact">
     <h2>Contact Us</h2>
-    <form action="mailto:admin@raigroups.in" method="post" enctype="text/plain">
+    <form action="mailto:support@raigroups.in" method="post" enctype="text/plain">
       <label for="name">Name</label>
       <input type="text" id="name" name="name" required/>
 
@@ -47,8 +47,7 @@
       <button type="submit">Send Message</button>
     </form>
 
-    <p><strong>Email:</strong> admin@raigroups.in</p>
-    <p><strong>Phone:</strong> +91 8172840406</p>
+    <p><strong>Email:</strong> support@raigroups.in</p>
   </section>
 
   <footer>
