--- a/catalog.html
+++ b/catalog.html
@@ -1,23 +1,42 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Catalog - Electrical Modular Boxes</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Product Catalog | RISHABH & BROTHERS SERVICES</title>
     <style>
-        body { font-family: Arial, sans-serif; background: #f8f8f8; margin: 0; padding: 0; }
-        .container { max-width: 900px; margin: 40px auto; background: #fff; padding: 32px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); }
-        h1 { text-align: center; color: #2c3e50; }
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fcfcfc; }
+        header { background-color: #FF6600; color: white; padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; }
+        header img { height: 60px; }
+        nav a { color: white; margin-left: 20px; text-decoration: none; font-weight: bold; }
+        .catalog { max-width: 900px; margin: 40px auto; background: #fff; padding: 32px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); }
+        .catalog h2 { font-size: 32px; color: #1e88e5; text-align: center; margin-bottom: 24px; }
         table { width: 100%; border-collapse: collapse; margin-top: 24px; }
         th, td { padding: 12px 16px; border-bottom: 1px solid #eaeaea; text-align: left; }
         th { background: #f0f0f0; color: #333; }
         tr:hover { background: #f9f9f9; }
         .product-img { width: 80px; height: 80px; object-fit: contain; border-radius: 4px; background: #eee; }
+        footer { background: #0d47a1; color: white; text-align: center; padding: 20px; }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Electrical Modular Boxes Catalog</h1>
+    <header>
+        <div>
+            <a href="index.html">
+            </a><img src="logo.jpg" alt="Company Logo" /><h1>Welcome to RISHABH & BROTHERS SERVICES</h1>
+        <p>Professional, Reliable, and Affordable Services</p>
+        </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
+            <a href="catalog.html">Product Catalog</a>
+        </nav>
+    </header>
+
+    <section class="catalog">
+        <h2>Electrical Modular Boxes Catalog</h2>
         <table>
             <thead>
                 <tr>
@@ -69,6 +88,10 @@
                 </tr>
             </tbody>
         </table>
-    </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 RISHABH & BROTHERS SERVICES | All rights reserved.</p>
+    </footer>
 </body>
 </html>
