--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
+        <a href="catalog.html">Product Catalog</a>
     </nav>
   </header>
 
