--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,7 @@
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
+        <a href="catalog.html">Product Catalog</a>
     </nav>
   </header>
 
