--- a/catalog.html
+++ b/catalog.html
@@ -28,10 +28,12 @@
         <p>Professional, Reliable, and Affordable Services</p>
         </div>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
-            <a href="catalog.html">Product Catalog</a>
+                <nav>
+                                    <a href="index.html">Home</a>
+                                    <a href="services.html">Services</a>
+                                    <a href="catalog.html">Product Catalog</a>
+                                    <a href="contact.html">Contact</a>
+                                    <a href="cart.html">Cart</a>
         </nav>
     </header>
 
@@ -43,6 +45,8 @@
                     <th>Model</th>
                     <th>Description</th>
                     <th>Image</th>
+                    <th>Inquiry</th>
+                       <th>Add to Cart</th>
                 </tr>
             </thead>
             <tbody>
@@ -50,48 +54,89 @@
                     <td>2M</td>
                     <td>2 Module Electrical Modular Box</td>
                     <td><img src="img2.jpg" alt="2M Box" class="product-img"></td>
+                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%202M%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
+                              <td><button onclick="addToCart('2M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>3M</td>
                     <td>3 Module Electrical Modular Box</td>
                     <td><img src="img3.jpg" alt="3M Box" class="product-img"></td>
+                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%203M%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
+                              <td><button onclick="addToCart('3M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>4M</td>
                     <td>4 Module Electrical Modular Box</td>
                     <td><img src="img4.jpg" alt="4M Box" class="product-img"></td>
+                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%204M%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
+                              <td><button onclick="addToCart('4M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>6M</td>
                     <td>6 Module Electrical Modular Box</td>
                     <td><img src="img6.jpg" alt="6M Box" class="product-img"></td>
+                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%206M%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
+                              <td><button onclick="addToCart('6M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>8MS</td>
                     <td>8 Module Slim Electrical Modular Box</td>
                     <td><img src="img8ms.jpg" alt="8MS Box" class="product-img"></td>
+                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%208MS%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
+                              <td><button onclick="addToCart('8MS')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>8MH</td>
                     <td>8 Module Heavy Electrical Modular Box</td>
                     <td><img src="img8mh.jpg" alt="8MH Box" class="product-img"></td>
+                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%208MH%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
+                              <td><button onclick="addToCart('8MH')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>12M</td>
                     <td>12 Module Electrical Modular Box</td>
                     <td><img src="img12.jpg" alt="12M Box" class="product-img"></td>
+                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%2012M%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
+                              <td><button onclick="addToCart('12M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>18M</td>
                     <td>18 Module Electrical Modular Box</td>
                     <td><img src="img18.jpg" alt="18M Box" class="product-img"></td>
+                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%2018M%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
+                              <td><button onclick="addToCart('18M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
             </tbody>
         </table>
     </section>
 
+            <section class="catalog-inquiry" style="max-width:900px;margin:40px auto;background:#fff;padding:32px;border-radius:8px;box-shadow:0 2px 8px rgba(0,0,0,0.08);">
+                <h2 style="color:#1e88e5;text-align:center;">Product Inquiry</h2>
+                <form action="mailto:support@raigroups.in" method="post" enctype="text/plain">
+                    <label for="product">Product Model</label>
+                    <input type="text" id="product" name="product" placeholder="e.g. 2M, 3M, 4M" required />
+
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required />
+
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required />
+
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+
+                    <button type="submit" style="background-color:#1e88e5;color:white;padding:10px 20px;border:none;margin-top:10px;cursor:pointer;">Send Inquiry</button>
+                </form>
+                <p style="text-align:center;"><strong>Email:</strong> support@raigroups.in</p>
+            </section>
+
     <footer>
         <p>&copy; 2024 RISHABH & BROTHERS SERVICES | All rights reserved.</p>
     </footer>
+            <script>
+                function addToCart(model) {
+                    alert(model + " added to cart!");
+                }
+            </script>
 </body>
 </html>
