--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,9 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
+      <a href="catalog.html">Product Catalog</a>
       <a href="contact.html">Contact</a>
-        <a href="catalog.html">Product Catalog</a>
+      <a href="cart.html">Cart</a>
     </nav>
   </header>
 
