--- a/catalog.html
+++ b/catalog.html
@@ -1,3 +1,4 @@
+    <div id="inquiry-success" style="color:green;text-align:center;display:none;margin-top:8px;">Inquiry sent!</div>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -46,7 +47,7 @@
                     <th>Description</th>
                     <th>Image</th>
                     <th>Inquiry</th>
-                       <th>Add to Cart</th>
+                    <th>Add to Cart</th>
                 </tr>
             </thead>
             <tbody>
@@ -54,58 +55,86 @@
                     <td>2M</td>
                     <td>2 Module Electrical Modular Box</td>
                     <td><img src="img2.jpg" alt="2M Box" class="product-img"></td>
-                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%202M%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
-                              <td><button onclick="addToCart('2M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
+                    <td><button onclick="openInquiryPopup('2M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
+                    <td><button onclick="addToCart('2M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>3M</td>
                     <td>3 Module Electrical Modular Box</td>
                     <td><img src="img3.jpg" alt="3M Box" class="product-img"></td>
-                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%203M%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
-                              <td><button onclick="addToCart('3M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
+                    <td><button onclick="openInquiryPopup('3M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
+                    <td><button onclick="addToCart('3M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>4M</td>
                     <td>4 Module Electrical Modular Box</td>
                     <td><img src="img4.jpg" alt="4M Box" class="product-img"></td>
-                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%204M%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
-                              <td><button onclick="addToCart('4M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
+                    <td><button onclick="openInquiryPopup('4M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
+                    <td><button onclick="addToCart('4M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>6M</td>
                     <td>6 Module Electrical Modular Box</td>
                     <td><img src="img6.jpg" alt="6M Box" class="product-img"></td>
-                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%206M%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
-                              <td><button onclick="addToCart('6M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
+                    <td><button onclick="openInquiryPopup('6M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
+                    <td><button onclick="addToCart('6M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>8MS</td>
                     <td>8 Module Slim Electrical Modular Box</td>
                     <td><img src="img8ms.jpg" alt="8MS Box" class="product-img"></td>
-                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%208MS%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
-                              <td><button onclick="addToCart('8MS')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
+                    <td><button onclick="openInquiryPopup('8MS')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
+                    <td><button onclick="addToCart('8MS')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>8MH</td>
                     <td>8 Module Heavy Electrical Modular Box</td>
                     <td><img src="img8mh.jpg" alt="8MH Box" class="product-img"></td>
-                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%208MH%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
-                              <td><button onclick="addToCart('8MH')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
+                    <td><button onclick="openInquiryPopup('8MH')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
+                    <td><button onclick="addToCart('8MH')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>12M</td>
                     <td>12 Module Electrical Modular Box</td>
                     <td><img src="img12.jpg" alt="12M Box" class="product-img"></td>
-                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%2012M%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
-                              <td><button onclick="addToCart('12M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
+                    <td><button onclick="openInquiryPopup('12M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
+                    <td><button onclick="addToCart('12M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
                 <tr>
                     <td>18M</td>
                     <td>18 Module Electrical Modular Box</td>
                     <td><img src="img18.jpg" alt="18M Box" class="product-img"></td>
-                    <td><a href="mailto:support@raigroups.in?subject=Inquiry%20for%2018M%20Modular%20Box" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;text-decoration:none;">Inquire</a></td>
-                              <td><button onclick="addToCart('18M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
+                    <td><button onclick="openInquiryPopup('18M')" style="background:#1e88e5;color:#fff;padding:8px 16px;border-radius:4px;border:none;cursor:pointer;">Inquire</button></td>
+                    <td><button onclick="addToCart('18M')" style="background:#43a047;color:#fff;padding:8px 16px;border:none;border-radius:4px;cursor:pointer;">Add to Cart</button></td>
                 </tr>
+        <!-- Inquiry Popup -->
+        <div id="inquiry-popup" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.5);z-index:9999;align-items:center;justify-content:center;">
+            <div style="background:#fff;padding:32px;border-radius:8px;max-width:400px;margin:auto;position:relative;">
+                <button onclick="closeInquiryPopup()" style="position:absolute;top:8px;right:8px;background:#e53935;color:#fff;border:none;border-radius:50%;width:32px;height:32px;font-size:18px;cursor:pointer;">&times;</button>
+                <h2 style="color:#1e88e5;text-align:center;">Multi Product Inquiry</h2>
+                <form id="multi-inquiry-form">
+                    <label for="products">Select Products</label>
+                    <select id="products" name="products" multiple style="width:100%;margin-bottom:8px;">
+                        <option value="2M">2M</option>
+                        <option value="3M">3M</option>
+                        <option value="4M">4M</option>
+                        <option value="6M">6M</option>
+                        <option value="8MS">8MS</option>
+                        <option value="8MH">8MH</option>
+                        <option value="12M">12M</option>
+                        <option value="18M">18M</option>
+                    </select>
+                    <label for="name">Name</label>
+                    <input type="text" id="inq-name" name="name" required style="width:100%;margin-bottom:8px;" />
+                    <label for="email">Email</label>
+                    <input type="email" id="inq-email" name="email" required style="width:100%;margin-bottom:8px;" />
+                    <label for="comment">Comment</label>
+                    <textarea id="inq-comment" name="comment" rows="4" required style="width:100%;margin-bottom:8px;"></textarea>
+                    <button type="submit" style="background:#1e88e5;color:#fff;padding:10px 20px;border:none;border-radius:4px;cursor:pointer;width:100%;">Submit Inquiry</button>
+                </form>
+            <!-- Success message removed as mailto cannot confirm delivery -->
+            </div>
+        </div>
             </tbody>
         </table>
     </section>
@@ -135,8 +164,59 @@
     </footer>
             <script>
                 function addToCart(model) {
+                    // Get description for the model
+                    var descriptions = {
+                        '2M': '2 Module Electrical Modular Box',
+                        '3M': '3 Module Electrical Modular Box',
+                        '4M': '4 Module Electrical Modular Box',
+                        '6M': '6 Module Electrical Modular Box',
+                        '8MS': '8 Module Slim Electrical Modular Box',
+                        '8MH': '8 Module Heavy Electrical Modular Box',
+                        '12M': '12 Module Electrical Modular Box',
+                        '18M': '18 Module Electrical Modular Box'
+                    };
+                    var cart = JSON.parse(localStorage.getItem('cart') || '[]');
+                    var found = false;
+                    for (var i = 0; i < cart.length; i++) {
+                        if (cart[i].model === model) {
+                            cart[i].quantity += 1;
+                            found = true;
+                            break;
+                        }
+                    }
+                    if (!found) {
+                        cart.push({ model: model, description: descriptions[model], quantity: 1 });
+                    }
+                    localStorage.setItem('cart', JSON.stringify(cart));
                     alert(model + " added to cart!");
                 }
+
+                // Inquiry popup logic
+                function openInquiryPopup(selectedModel) {
+                  document.getElementById('inquiry-popup').style.display = 'flex';
+                  // Preselect product if single product inquiry
+                  var select = document.getElementById('products');
+                  for (var i = 0; i < select.options.length; i++) {
+                    select.options[i].selected = false;
+                    if (select.options[i].value === selectedModel) {
+                      select.options[i].selected = true;
+                    }
+                  }
+                  document.getElementById('inquiry-success').style.display = 'none';
+                }
+                function closeInquiryPopup() {
+                  document.getElementById('inquiry-popup').style.display = 'none';
+                }
+                                                document.getElementById('multi-inquiry-form').addEventListener('submit', function(e) {
+                                                    e.preventDefault();
+                                                    var products = Array.from(document.getElementById('products').selectedOptions).map(opt => opt.value).join(', ');
+                                                    var name = document.getElementById('inq-name').value;
+                                                    var email = document.getElementById('inq-email').value;
+                                                    var comment = document.getElementById('inq-comment').value;
+                                                    var mailto = `mailto:sales@raigroups.in?subject=Product Inquiry&body=Products: ${products}%0AName: ${name}%0AEmail: ${email}%0AComment: ${comment}`;
+                                                    window.location.href = mailto;
+                                                    document.getElementById('inquiry-success').style.display = 'block';
+                                                });
             </script>
 </body>
 </html>
