--- a/contact.html
+++ b/contact.html
@@ -36,18 +36,19 @@
 
   <section class="contact">
     <h2>Contact Us</h2>
-    <form action="mailto:support@raigroups.in" method="post" enctype="text/plain">
+    <form id="contact-form">
       <label for="name">Name</label>
-      <input type="text" id="name" name="name" required/>
+      <input type="text" id="contact-name" name="name" required/>
 
       <label for="email">Email</label>
-      <input type="email" id="email" name="email" required/>
+      <input type="email" id="contact-email" name="email" required/>
 
       <label for="message">Message</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
+      <textarea id="contact-message" name="message" rows="5" required></textarea>
 
       <button type="submit">Send Message</button>
     </form>
+    <div id="contact-success" style="color:green;text-align:center;display:none;margin-top:8px;">Message sent!</div>
 
     <p><strong>Email:</strong> support@raigroups.in</p>
   </section>
@@ -55,5 +56,29 @@
   <footer>
     <p>&copy; 2024 RISHABH & BROTHERS SERVICES | All rights reserved.</p>
   </footer>
+  <script>
+    document.getElementById('contact-form').addEventListener('submit', function(e) {
+      e.preventDefault();
+      var name = document.getElementById('contact-name').value;
+      var email = document.getElementById('contact-email').value;
+      var message = document.getElementById('contact-message').value;
+      fetch('http://localhost:3000/api/contact', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ name, email, message })
+      })
+      .then(res => res.json())
+      .then(data => {
+        if (data.success) {
+          document.getElementById('contact-success').style.display = 'block';
+        } else {
+          alert('Failed to send message. Please try again later.');
+        }
+      })
+      .catch(() => {
+        alert('Failed to send message. Please try again later.');
+      });
+    });
+  </script>
 </body>
 </html>
