--- a/contact.html
+++ b/contact.html
@@ -36,19 +36,7 @@
 
   <section class="contact">
     <h2>Contact Us</h2>
-    <form id="contact-form">
-      <label for="name">Name</label>
-      <input type="text" id="contact-name" name="name" required/>
-
-      <label for="email">Email</label>
-      <input type="email" id="contact-email" name="email" required/>
-
-      <label for="message">Message</label>
-      <textarea id="contact-message" name="message" rows="5" required></textarea>
-
-      <button type="submit">Send Message</button>
-    </form>
-    <div id="contact-success" style="color:green;text-align:center;display:none;margin-top:8px;">Message sent!</div>
+    <iframe aria-label='Contact Us' frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.in/rishabhraig1/form/ContactUs/formperma/tGOY0yUv1wlVncz9cNa-N06eXlp3zrnfnZJD19zk8eI'></iframe>
 
     <p><strong>Email:</strong> support@raigroups.in</p>
   </section>
