--- a/catalog.html
+++ b/catalog.html
@@ -121,25 +121,7 @@ in        <!-- Inquiry Popup -->
         </table>
     </section>
 
-            <section class="catalog-inquiry" style="max-width:900px;margin:40px auto;background:#fff;padding:32px;border-radius:8px;box-shadow:0 2px 8px rgba(0,0,0,0.08);">
-                <h2 style="color:#1e88e5;text-align:center;">Product Inquiry</h2>
-                <form action="mailto:support@raigroups.in" method="post" enctype="text/plain">
-                    <label for="product">Product Model</label>
-                    <input type="text" id="product" name="product" placeholder="e.g. 2M, 3M, 4M" required />
-
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required />
-
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required />
-
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
-
-                    <button type="submit" style="background-color:#1e88e5;color:white;padding:10px 20px;border:none;margin-top:10px;cursor:pointer;">Send Inquiry</button>
-                </form>
-                <p style="text-align:center;"><strong>Email:</strong> support@raigroups.in</p>
-            </section>
+            <!-- Inline inquiry form removed; only popup modal remains for product inquiry -->
 
     <footer>
         <p>&copy; 2024 RISHABH & BROTHERS SERVICES | All rights reserved.</p>
